--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@googlemaps/react-wrapper": "^1.1.23",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.16.1",
@@ -12,12 +13,14 @@
     "bootstrap": "^5.1.3",
     "clipboard": "^2.0.8",
     "copy": "^0.3.2",
+    "google-maps-react": "^2.0.6",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.5",
     "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.5.3",
     "react-icons": "^4.3.1",
+    "react-places-autocomplete": "^7.3.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
@@ -49,5 +52,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "html-loader": "^3.1.0"
   }
 }
