--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,12 +16,16 @@
         "bootstrap": "^5.1.3",
         "clipboard": "^2.0.8",
         "copy": "^0.3.2",
+        "google-maps": "^4.3.3",
+        "google-maps-react": "^2.0.6",
         "react": "^17.0.2",
+        "react-autocomplete": "^1.8.1",
         "react-bootstrap": "^2.0.0-beta.5",
         "react-copy-to-clipboard": "^5.0.3",
         "react-dom": "^17.0.2",
         "react-dropzone": "^11.5.3",
         "react-icons": "^4.3.1",
+        "react-places-autocomplete": "^7.3.0",
         "react-redux": "^7.2.4",
         "react-router-dom": "^5.2.0",
         "react-scripts": "5.0.0",
