--- a/Backend/package.json
+++ b/Backend/package.json
@@ -6,13 +6,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server",
-    "dev" : "nodemon server" 
+    "dev": "nodemon server"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "twilio": "^3.74.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
